fix: add responsive breakpoints for navbar at 1280px and 900px to prevent cropping

--- a/client/src/components/Navbar/navbar.scss
+++ b/client/src/components/Navbar/navbar.scss
@@ -1,3 +1,19 @@
+@media screen and (max-width: 1280px) {
+  #shop-name {
+    font-size: 1.8rem !important;
+    margin-left: 8rem !important;
+    margin-right: 8rem !important;
+  }
+
+  .muiIcons {
+    margin-left: 0rem !important;
+  }
+
+  .link {
+    font-size: 0.8rem !important;
+  }
+}
+
 @media screen and (max-width: 1124px) {
   #shop-name {
     font-size: 1.8rem !important;
@@ -27,6 +43,22 @@
 
   .link {
     font-size: 0.8rem !important;
+  }
+}
+
+@media screen and (max-width: 900px) {
+  #shop-name {
+    font-size: 1.4rem !important;
+    margin-left: 2rem !important;
+    margin-right: 2rem !important;
+  }
+
+  .muiIcons {
+    margin-left: 0rem !important;
+  }
+
+  .link {
+    font-size: 0.75rem !important;
   }
 }
 
